# nbv_baselines

./: CMakeLists.txt  README.md  package.xml  requirements.txt
cfg/: active_grasp.rviz  active_grasp.yaml
cfg/sim/: challenging_scene_1.yaml  challenging_scene_2.yaml
scripts/: bt_sim_node.py  run.py
src/active_grasp/: __init__.py  active_perception.py  active_perception_demo.py  active_perception_policy.py  baselines.py  controller.py  nbv.py  policy.py  simulation.py
src/active_grasp/active_perception/annotations/: external_module.py  singleton.py  stereotype.py
src/active_grasp/active_perception/configs/: config.py  local_inference_config.yaml
src/active_grasp/active_perception/modules/: pipeline.py
src/active_grasp/active_perception/modules/func_lib/: __init__.py  samplers.py  sde.py
src/active_grasp/active_perception/modules/module_lib/: __init__.py  fusion_layer.py  gaussian_fourier_projection.py  linear.py  position_embedding.py  rot_head.py
src/active_grasp/active_perception/modules/pts_encoder/: abstract_pts_encoder.py  pointnet2_encoder.py  pointnet3_encoder.py  pointnet_encoder.py  pts_encoder_factory.py
src/active_grasp/active_perception/modules/rgb_encoder/: abstract_rgb_encoder.py  dinov2_encoder.py  rgb_encoder_factory.py
src/active_grasp/active_perception/modules/view_finder/: abstract_view_finder.py  gf_view_finder.py  view_finder_factory.py
src/active_grasp/active_perception/utils/: cache_util.py  file_util.py  metric_util.py  omni_util.py  pcl_util.py  pose_util.py  tensorboard_util.py  view_util.py
srv/: TargetID.srv
