<?xml version="1.0"?>
<package format="2">
    <name>active_grasp</name>
    <version>0.1.0</version>
    <description>TODO</description>
    <maintainer email="mbreyer@ethz.ch">Michel Breyer</maintainer>
    <license>TODO</license>
    <url></url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

    <depend>panda_moveit_config</depend>
    <depend>geometry_msgs</depend>
    <depend>robot_helpers</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>trac_ik</depend>
    <depend>vgn</depend>
    <depend>chomp_motion_planner</depend>
    <depend>moveit_planners_chomp</depend>
    <depend>pilz_industrial_motion</depend>
    <depend>franka_msgs</depend>
    <depend>franka_gripper</depend>
    <depend>kdl_parser</depend>
    <depend>kdl_parser_py</depend>
    <depend>ros_numpy</depend>
</package>
